feat: Refactor listing logic, implement server list ping